[gd_scene load_steps=4 format=3 uid="uid://7wb47q218nak"]

[ext_resource type="Theme" path="res://theme/ui_theme.tres" id="1_sb6pv"]
[ext_resource type="Script" path="res://menu/editor_tools.gd" id="2_kd4qa"]
[ext_resource type="FontFile" uid="uid://bt1lbket2snnd" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_ln5f0"]

[node name="EditorTools" type="Control"]
custom_minimum_size = Vector2(128, 72)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sb6pv")
script = ExtResource("2_kd4qa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SnapToGridButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "Snap to grid"

[node name="Tools" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(72, 48)
layout_mode = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("2_ln5f0")
theme_override_font_sizes/font_size = 8
item_count = 3
item_0/text = "SELECT"
item_1/text = "ADD"
item_2/text = "ERASE"

[connection signal="toggled" from="VBoxContainer/SnapToGridButton" to="." method="_on_snap_to_grid_button_toggled"]
[connection signal="item_selected" from="VBoxContainer/Tools" to="." method="_on_tools_item_selected"]
